--- a/pages/p1/956129.md
+++ b/pages/p1/956129.md
@@ -1,4 +1,4 @@
-### 丢车保帅？这张照片泄露了周恩来内心诡秘(图)
+### 山西13岁少女被校长殴打 还被迫写“检讨”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）" src="https://img2.secretchina.com/pic/2019/10-31/p2552801a305236912-ss.jpg" style="height:338px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="山西吕梁临县一中学13岁少女被校长叫到办公室殴打，甚至逼迫该少女写下一份不堪入目的“检讨”（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-17/p2840091a73868858-ss.jpg" style="width:600px"/>
   <br>
-   周恩来1955年4月16日上午抵达新加坡加冷机场，其诡异的眼神或泄露其当时的诡秘内心世界。（网络图片）
+   山西吕梁临县一中学13岁少女被校长叫到办公室殴打，甚至逼迫该少女写下一份不堪入目的“检讨”（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,61 +29,53 @@
   </div>
  </div>
  <p>
-  1955年4月11日，
+  【看中国2020年12月17日讯】（看中国记者文俪综合报导）近期，
   <strong>
-   万隆会议
-  </strong>
-  前夕，“
-  <strong>
-   克什米尔公主号
-  </strong>
-  ”飞机爆炸案曾震惊国际。随后真相不断披露，时任中共总理
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/周恩来" target="_blank">
-    周恩来
+   <span href="https://www.secretchina.com/news/gb/tag/山西" target="_blank">
+    山西
    </span>
+   吕梁
   </strong>
-  预先已知道这起针对他的暗杀行动，但周为了自保和迷惑对手，临时改变路线却让其他人作了替死鬼。
+  临县一中学
+  <strong>
+   13岁少女
+  </strong>
+  被
+  <strong>
+   校长
+  </strong>
+  叫到办公室殴打，甚至逼迫该少女写下一份不堪入目的“
+  <strong>
+   检讨
+  </strong>
+  ”。该少女头部受外伤，全身多处淤青。有律师表示，如情况属实，该名校长就涉及严重侵犯女生的人格尊严。网友纷纷怒斥：“这得多龌龊的人，才能想到这样折磨人的方式？”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  网络曾曝光一张当时周恩来改变路线后于1955年4月16日上午抵达新加坡加冷机场的罕见照片，照片中周恩来诡异的眼神或泄露其当时的诡秘内心世界。从照片上看，周恩来和许多随行人员在一起，大家都目视前方，行色匆匆，唯有周恩来微仰着头，向天空张望，目光诡异。
- </p>
- <p>
-  此前4月11日，周恩来原计划乘坐的“
-  <span href="https://www.secretchina.com/news/gb/tag/克什米尔公主号" target="_blank">
-   克什米尔公主号
+  综合媒体报导，11月30日晚11点多，
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;filedall=1&amp;q=%E5%B1%B1%E8%A5%BF%E5%90%95%E6%A2%81&amp;t=1" target="_blank">
+   山西吕梁
   </span>
-  ”飞机爆炸，机上有11人无辜遇难，而预先知悉暗杀计划的周恩来则金蝉脱壳。
+  临县某中学13岁女生小娟（化名）被校长叫去办公室谈话，但却遭到殴打。甚至还逼迫小娟写下一份全是男女之事不堪入目的“检讨”。小娟则全身多处淤青受伤，头部还有外伤。
  </p>
  <p>
-  <strong>
-   掌握情报“克什米尔公主号”有炸弹
-  </strong>
+  事件被曝光后迅速引起了广泛关注。小娟家人为了回应风言风语及
+  <span href="https://www.secretchina.com/news/gb/tag/校长" target="_blank">
+   校长
+  </span>
+  指责其做了败坏门风的事，就带了女孩去了医院做检查。检查结果显示女孩是清白的，并非校长所指认的那样。但女孩身体上不同程度的伤痕也让家人难以忍受。但女孩家长打110，却被告知要找当地的派出所，派出所则又将球踢给教育局，而教育局的相关人员又躲着不见。
  </p>
  <p>
-  综合多方报导，1955年4月18日至24日，第一次亚非会议在印度尼西亚的万隆举行。周恩来为中国代表团团长，并租用印度航空公司的“克什米尔公主号”客机，率团取道香港前往万隆。
+  女孩家人想找校长给个说法，该名涉事校长被指先打电话说给他们一两万人民币了事，后来又表示教育局已经着手调查，自己没有必要交代。于是女孩家人决定从法律程序解决。
  </p>
  <p>
-  4月3日，中共接到密报，国民党特务机关已获悉中共代表团行踪，可能采取行动。9日晚，进一步情报称，代表团所乘飞机将遭破坏，飞机上备有定时炸弹。周恩来立即要求通过外交渠道向英国政府交涉。
+  由于事件不断发酵，影响越来越大，最终引起了相关部门及教育局的重视。并且对此事作出了回应，宣称一定会将此件事情调查清楚，对其事情真相进行全方面调查。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  10日上午，中共外交部紧急约见英国驻华代办处参赞艾惕恩，告知这一消息。新华社香港分社9日晚即将这一情况正式通知港英当局，还在11日两次约见印度航空公司驻香港分公司经理。该经理表示一定严加防范，不让任何外人接近飞机。
+  网友在微博相关讨论串下纷纷留言怒斥：“这是学校校长还是社会黑老大？殴打逼迫威胁学生，没被停职调查？还在继续当校长？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +90,7 @@
   </div>
  </center>
  <p>
-  在当年四月十一日“克什米尔公主号”出事前八天，中共就掌握了“克什米尔公主号”客机将被炸毁的情报。
+  “太生气了，这孤儿校长背地里还不知道干了多少禽兽不如的事，一定要彻查！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +105,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   照常起飞中途爆炸坠海导致11人遇难
-  </strong>
+  “小姑娘体检一切正常，校长是不是心里有什么毛病，让她写这种
+  <span href="https://www.secretchina.com/news/gb/tag/检讨" target="_blank">
+   检讨
+  </span>
+  书？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +124,7 @@
   </div>
  </center>
  <p>
-  4月11日上午，“克什米尔公主号”准时到达北京，接载中共代表团和三名外国记者，当时人们并不知道周恩来不在飞机上。12时15分，“克什米尔公主号”抵达香港启德机场，休息加油后飞印尼的万隆。
+  “太气人了！建议物理阉割！这是什么垃圾！让一个未成年的女孩子写这样的东西！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,24 +139,7 @@
   </div>
  </center>
  <p>
-  下午6时30分，机舱内突然发出爆炸声，随即多处起火。机长决定强行降落，并用无线电发出三次求救信号。雅加达机场得知周恩来不在机上，信号中断。伴随着一声巨大的爆炸声，飞机坠入大海，炸成几段。除三名机组人员奇迹生还，机上其余11人全部遇难。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   全身而退 周恩来“丢卒保车金蝉脱壳”
-  </strong>
+  “什么化学阉割，缺刀吗？老子出钱买！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,7 +158,7 @@
   </ins>
  </center>
  <p>
-  “克什米尔公主号”事件的目标直指周恩来，但周恩来却临时改变了路线，金蝉脱壳，从昆明取道仰光到达雅加达。
+  “处女膜完整，然后让人写这种东西，难道构成猥亵吗？恶不恶心？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -196,7 +173,7 @@
   </div>
  </center>
  <p>
-  4月7日，周恩来和陈毅率代表团从北京乘伊尔——14飞机首先飞昆明。4月14日清晨7时15分，周恩来一行26人乘坐从印度航空公司租借的另一架专机“空中霸王号”自昆明起飞，前往仰光。当地时间上午10点30分，“空中霸王号”降落在仰光机场。
+  “那个所谓的恶心检讨书，并不是检讨书，是变想的黄文！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -211,7 +188,7 @@
   </div>
  </center>
  <p>
-  4月16日凌晨，周恩来一行由仰光飞往雅加达。“空中霸王号”飞行8个小时进入新加坡空域，正赶上航线前方有雷雨区。飞机无法飞越雷雨区，4月16日上午飞机降落新加坡加冷机场。4月16日晚6时，周恩来到达印度尼西亚首都雅加达。
+  “还有媒体打电话给教育局，教育局一句‘不知道情况’就踢皮球给挂了，那个校长也是一副无所谓的样子，真是让人生气！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -226,9 +203,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   声东击西 周恩来让别人枉做了替死鬼
-  </strong>
+  “为啥有关部门需要先在网上火了之后，压不住了，才介入？而不是老百姓有诉求的时候介入呢？纳税人的钱养你们有什么用？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,22 +218,7 @@
   </div>
  </center>
  <p>
-  “克什米尔公主号”爆炸失事后，香港警方随即展开艰苦的调查，一无所获。后来还是根据中共提供的情报才破了案。中共明确告知事件是国民党保密局香港情报站策动，主谋赵斌成，指挥者金建夫，执行者是香港机场地勤人员周驹，使用的定时炸弹是从台湾基隆秘密运到香港。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  调查人员非常困惑不解：既然周恩来对这事了如指掌，为什么还要中共代表团其他成员按原计划飞行，去送死呢？原来周恩来为迷惑台湾香港情报站不再改变计划，确保自己的安全，让包括自己司机在内的11名中外菁英去送死。据周恩来后来说，这叫做“声东击西”、“丢车保帅”。
+  北京京师律师事务所一位律师表示，如果情况属实，该名校长就严重侵犯女生的人格尊严。相关部门应该对其追究行政责任，如撤职、降级等。同时赔偿女生相应的医疗费用及精神损失补偿费等。体罚构成轻伤，该校长涉及故意伤害罪。如对女生造成严重的心理伤害，就可能涉嫌侮辱罪，这样就面临着刑事立案及刑事追责。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -272,11 +232,14 @@
    </div>
   </center>
   <p>
-   责任编辑:徐枫
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
   </p>
   <p>
    本文短网址:
-   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb3qNc"/>
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40jR"/>
    转载请注明出处，
    <span style="color:red">
     严禁建立镜像网站
@@ -322,13 +285,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/916336.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/11/916336.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956129.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956129.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/956129.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/17/956129.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/916336.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/956129.md' width='0px' height='0px'/>
