--- a/pages/nf4514/n12627085.md
+++ b/pages/nf4514/n12627085.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月17日讯】（大纪元记者陈霆、徐简综合报导）美国最高立法机构周三（12月16日）首次就选举问题召开听证会，打破两党对大选违规行为的沉默。邀请6位证人出席，分别介绍了
+ 【大纪元2020年12月17日讯】（大纪元记者陈霆、徐简、戴芙若综合报导）美国最高立法机构周三（12月16日）首次就选举问题召开听证会，打破两党对大选违规行为的沉默。邀请6位证人出席，分别介绍了
  <ok href="https://www.epochtimes.com/gb/tag/%E9%80%89%E4%B8%BE%E8%88%9E%E5%BC%8A.html">
   选举舞弊
  </ok>
@@ -56,6 +56,12 @@
 <p>
  除格雷厄姆外，众议院外交委员会成员肯·巴克（Ken Buck）本月早些时候也致信司法部长威廉·巴尔（William Barr），敦促他对亨特展开调查。
 </p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/17/n12627541.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  应对人权和腐败
  <ok href="https://www.epochtimes.com/gb/tag/%E5%B7%9D%E6%99%AE.html">
@@ -84,11 +90,17 @@
 <p>
  川普总统2017年签署的13818号（Executive Order 13818）“冻结涉及严重侵犯人权者或腐败分子的财产”行政令，是基于惩罚人权罪犯和腐败分子的《全球马格尼茨基人权问责法》。
 </p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/17/n12627138.htm">
+  详情请阅全文
+ </ok>
+ 。
+</p>
 <h3>
  英文大纪元特稿：关键时刻 川普应采取行动
 </h3>
 <p>
- 因为大纪元在最新的特稿中说，“2020年的总统选举不同于以往任何一次，需要采取前所未有的措施来保护它﹐保护我们的共和国以及我们的未来。”
+ 英文大纪元在最新的特稿中说，“2020年的总统选举不同于以往任何一次，需要采取前所未有的措施来保护它﹐保护我们的共和国以及我们的未来。”
 </p>
 <p>
  “我们的政府形式处于危险之中。如果可以像2020年这样通过不诚实的手段赢得选举，那么可以预期下一次选举也会以同样的方式获胜。美国人民实际上将失去投票权。”
@@ -98,6 +110,12 @@
 </p>
 <p>
  ”我们的制度处于危机之中﹐川普应该采取行动恢复法治。”
+</p>
+<p>
+ <ok href="https://www.epochtimes.com/gb/20/12/16/n12625811.htm">
+  详情请阅全文
+ </ok>
+ 。
 </p>
 <h3>
  川普律师： 摇摆州议会是胜选关键
