同步于: 12月18日1时3分

--- a/pages/soh6/454594.md
+++ b/pages/soh6/454594.md
@@ -1,4 +1,4 @@
-### 【选情更新12/17】民调：希望川普排乾沼泽 不要社会主义
+### 【选情更新12/17】1月6日联席会议将发生什么？多位议员或挑战选举结果
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -23,6 +23,49 @@
  </p>
  <p>
   以下是希望之声为您总结的12月17日（周四）的选情更新情况：
+ </p>
+ <h3>
+  1月6日联席会议将发生什么？多位参众议员或挑战选举结果
+ </h3>
+ <p>
+  1月6日，参众两院将举行联席会议，确认2020年总统大选获胜者。目前已有多位共和党国会议员对川普法律团队挑战选举舞弊表示支持，一些议员表示可能会在联席会议上挑战选举人团投票结果。
+ </p>
+ <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
+  <div>
+  </div>
+ </div>
+ <p>
+  多次明确表态要在联席会议上挑战摇摆州认证拜登的是阿拉巴马州联邦众议员布鲁克斯（Mo Brooks）。他12月16日再次表示，自己不会放弃挑战选举欺诈，且对1月6日在国会挑战选举人团投票结果表示乐观。
+ </p>
+ <p>
+  来自密苏里州的联邦参议员霍利（Josh Hawley）近日也在接受媒体采访时表示，立法者可以在1月6日挑战选举人团投票结果。
+ </p>
+ <p>
+  来自佛州的联邦参议员斯科特（Rick Scott）12月16日对媒体说，直到1月6日，参院共和党人都将继续关注选举欺诈。他虽然并未明确说出将在联席会议挑战拜登，但暗示1月6日“好戏将登场”，让大家“拭目以待”。
+ </p>
+ <p>
+  在12月16日的参院大选违规听证会上，联邦那个参议员保罗（Rand Paul）暗示，他可能将加入布鲁克斯，挑战选举人团投票结果。他说：“欺诈行为发生了，选举在许多方面被盗，唯一可以解决的方法就是未来加强执法。”
+ </p>
+ <p>
+  另外，来自乔治亚州的联邦参议员洛夫勒（Kelly Loeffler）也表示，不排除在联席会议对拜登当选提出挑战的可能性。
+ </p>
+ <h3>
+  美科技电商巨头：中共想用舞弊一举拿下美国
+ </h3>
+ <p>
+  科技亿万富翁、美国电商巨头Overstock创始人伯恩（Patrick Byrne）早在8月就组建了一个网络情报团队，对美国的投票系统进行分析。他表示，选举舞弊就是中共秘密的“杀手锏”，希望借此一举拿下美国。
+ </p>
+ <p>
+  他说，他的专家团队发现，至少有两款已渗透美国的主要投票系统，“幕后黑手”是中国开发人员。他说：“基本上有一个指挥链，从中国通过伊朗，再到古巴和委内瑞拉。”他还说，“中国人通过Smartmatic的巴拿马分部为Smartmatic提供资金，中间又通过委内瑞拉转了一手。而最近发现了多米尼（Dominion）机器中隐藏的代码，似乎显示出源自中国的来历。”
+ </p>
+ <h3>
+  川普宣布延长国家紧急状态一年 应对人权和腐败
+ </h3>
+ <p>
+  川普总统12月16日（周四）宣布，为了继续应对国际上严重侵犯人权和腐败的现象，美国将国家紧急状态延长一年。川普当天知会美国国会，将2017年12月20日通过的第13818号行政命令宣布的国家紧急状态延续到2020年12月20日之后。
+ </p>
+ <p>
+  13818号行政令旨在“冻结涉及严重侵犯人权者或腐败分子的财产”，是川普政府出台的基于惩罚全球人权罪犯和腐败分子的《全球马格尼茨基人权问责法》的行政令。
  </p>
  <h3>
   川普律师：胜选关键在于摇摆州议会
@@ -89,15 +132,6 @@
  </p>
  <p>
   综合媒体报导，政府将与乔治亚大学（UGA）合作，对全州的“缺席投票（不在籍投票）”进行签名验证。
- </p>
- <h3>
-  科技店商巨头：中共想用舞弊一举拿下美国
- </h3>
- <p>
-  科技亿万富翁、美国电商巨头Overstock创始人伯恩（Patrick Byrne）早在8月，就组建了一个网络情报团队，对美国的投票系统进行分析。他表示，选举舞弊就是中共秘密的“杀手锏”，希望借此一举拿下美国。
- </p>
- <p>
-  他说，他的专家团队发现，至少有两款已渗透美国的主要投票系统，“幕后黑手”是中国开发人员。他说：“基本上有一个指挥链，从中国通过伊朗，再到古巴和委内瑞拉。”他还说，“中国人通过Smartmatic的巴拿马分部为Smartmatic提供资金，中间又通过委内瑞拉转了一手。而最近发现了多米尼（Dominion）机器中隐藏的代码，似乎显示出源自中国的来历。”
  </p>
  <h3>
   <ok href="/term/168722">
