--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -111756,4 +111756,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12182004)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12182052)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
