--- a/pages/nsc412/n12629751.md
+++ b/pages/nsc412/n12629751.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12·18】“请总统下令戒严拯救国家”" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/145771-600x400.png"/>
+<div><img alt="【大选更新12·18】川普：对最高法院非常失望" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/GettyImages-1198673347-600x400.jpg"/>
 <div class="caption">
- 美国白宫“We the People”请愿网站16日新增一项请愿，“我们美国人民要求川普总统下令戒严以拯救我们的国家！”（白宫请愿网站截图）
+ 图为今年初川普与罗伯茨（右）的一次见面。（Getty Image）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
