--- a/pages/soh6/454936.md
+++ b/pages/soh6/454936.md
@@ -1,4 +1,4 @@
-### 【选情更新12/18】密歇根一县重新计票 证实川普获胜
+### 【选情更新12/18】密歇根一县重新计票后 证实川普获胜
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -47,6 +47,7 @@
   ：
  </p>
  <h2>
+  美媒：
   <ok href="/term/12866">
    五角大楼
   </ok>
@@ -81,7 +82,7 @@
   官员指出，“从今天开始至下周，我们的日程安排还剩下不到20天”，他补充说，“参加会议的国防部工作人员不计其数”，“这些高级官员也需要从事日常工作，并被过渡活动分神...在假期期间，我们休息两周。”
  </p>
  <p>
-  美媒报道说，尚且不知道政府官员休假返回后继续恢复合作的可能性。
+  美媒Axios报道说，尚且不知道政府官员休假返回后继续恢复合作的可能性。
  </p>
  <p>
   迄今为止，在总务管理局（GSA）不堪拜登阵营骚扰，放行对
@@ -93,6 +94,18 @@
    五角大楼
   </ok>
   宣布取消与过渡相关的预定会议。
+ </p>
+ <h2>
+  另一国会议员表示要在1月6日质疑选举团投票
+ </h2>
+ <p>
+  亚利桑那国会众议员安迪·比格斯（Andy Biggs）说，他准备与阿拉巴马州众议员布鲁克斯（Mo Brooks）一起挑战某些州在1月6日获得选举的选举团票，“现在，我大力支持该计划，因为我们已经看到了很多指控。”
+ </p>
+ <p>
+  在本周四，比格斯、布鲁克斯与其他17名众议员一起，联名要求国会举办更多选举调查听证会，以确保国会成员听取更多证人证词。
+ </p>
+ <p>
+  “我与他（布鲁克斯）同一阵线，因为选举存在着太多欺诈行为，我们实际上需要指出这一点，”比格斯说。
  </p>
  <h2>
   乔治亚州宣布检查邮寄选票签名 但拒绝挑战选举结果
@@ -119,10 +132,13 @@
   12月初，代表川普团队的联合安全行动小组前往密歇根州检查22台选举投票机，调查发现，这些选举机在2020年选举期间的运营错误率超过68%，远高于法定许可的25万分之一的错误率。
  </p>
  <h2>
-  鲍威尔在高院提起推翻密歇根州和乔治亚州的诉讼案
+  鲍威尔在高院提起推翻密州和乔州的诉讼案
  </h2>
  <p>
-  资深律师西德尼·鲍威尔（Sidney Powell）要求最高法院推翻密歇根州和乔治亚州的选举结果。本周，鲍威尔表示，高院拒绝了她与团队成员在威斯康星和亚利桑那的诉讼，记录了密歇根州和乔治亚州的诉讼案，但宣布在1月14日前才会给出恢复。
+  资深律师西德尼·鲍威尔（Sidney Powell）要求最高法院推翻密歇根州和乔治亚州的选举结果。
+ </p>
+ <p>
+  本周，鲍威尔表示，高院拒绝了她与团队成员在威斯康星和亚利桑那的诉讼，记录了密歇根州和乔治亚州的诉讼案，但宣布在1月14日前才会给出恢复。
  </p>
  <p class="meta-btm">
   责任编辑：张莉莉
