同步于: 12月19日11时52分

--- a/pages/soh6/454936.md
+++ b/pages/soh6/454936.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="美國郵寄選票示意圖（圖片來源：AP）" src="https://img.soundofhope.org/2020-12/aps-1608309993222.jpg"/>
+<div><img alt="美国邮寄选票示意图（图片来源：AP）" src="https://img.soundofhope.org/2020-12/aps-1608309993222.jpg"/>
 <br/><figcaption class="caption">
- 美國郵寄選票示意圖（圖片來源：AP）
+ 美国邮寄选票示意图（图片来源：AP）
 </figcaption></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -17,134 +17,134 @@
 <div><div class="Content__Wrapper sc-1bvya0-0 grZQxZ">
  <p class="meta-top">
   <span class="meta">
-   【希望之聲2020年12月18日】（本台記者凌杉綜合報導）
+   【希望之声2020年12月18日】（本台记者凌杉综合报导）
   </span>
-  12月18日（週五），美國總統川普發佈推文譴責說，“喬治亞的州務卿與州長都被稱爲‘共和黨人’，他們不允許富爾頓縣進行重要的選民簽名驗證過程。另外，他們也不允許共和黨‘觀察員’在現場進行驗證！”
+  12月18日（周五），美国总统川普发布推文谴责说，“乔治亚的州务卿与州长都被称为‘共和党人’，他们不允许富尔顿县进行重要的选民签名验证过程。另外，他们也不允许共和党‘观察员’在现场进行验证！”
  </p>
  <p>
-  “喬治亞州長還沒有召開特別會議。如此容易做到，他爲什麼不這樣做？他需要進行。必須立即行動！”，川普說。
+  “乔治亚州长还没有召开特别会议。如此容易做到，他为什么不这样做？他需要进行。必须立即行动！”，川普说。
  </p>
  <p>
-  另外，根據美媒Axios報道，美國
-  <ok href="/term/12866?lang=b5">
-   五角大樓
+  另外，根据美媒Axios报道，美国
+  <ok href="/term/12866">
+   五角大楼
   </ok>
-  在週四（12月17日）晚間宣佈，將叫停與
-  <ok href="/term/382288?lang=b5">
-   拜登團隊
+  在周四（12月17日）晚间宣布，将叫停与
+  <ok href="/term/382288">
+   拜登团队
   </ok>
-  的任何過渡合作。對此，
-  <ok href="/term/382288?lang=b5">
-   拜登團隊
+  的任何过渡合作。对此，
+  <ok href="/term/382288">
+   拜登团队
   </ok>
-  表示震驚。
+  表示震惊。
  </p>
  <p>
-  以下是希望之聲爲您整理的12月18日
-  <ok href="/term/411292?lang=b5">
-   選情更新
+  以下是希望之声为您整理的12月18日
+  <ok href="/term/411292">
+   选情更新
   </ok>
   ：
  </p>
  <h2>
   美媒：
-  <ok href="/term/12866?lang=b5">
-   五角大樓
+  <ok href="/term/12866">
+   五角大楼
   </ok>
-  停止與
-  <ok href="/term/382288?lang=b5">
-   拜登團隊
+  停止与
+  <ok href="/term/382288">
+   拜登团队
   </ok>
-  過渡合作
+  过渡合作
  </h2>
  <p>
-  週四晚間，美國代理國防部長克里斯·米勒（Chris Miller）宣佈，國防部將終止和
-  <ok href="/term/382288?lang=b5">
-   拜登團隊
+  周四晚间，美国代理国防部长克里斯·米勒（Chris Miller）宣布，国防部将终止和
+  <ok href="/term/382288">
+   拜登团队
   </ok>
-  的過渡合作。對此，拜登陣營的高級官員表示震驚，且不瞭解內情。
+  的过渡合作。对此，拜登阵营的高级官员表示震惊，且不了解内情。
  </p>
  <div class="AD_Embed__Wrap-sc-1xslmin-0 igMuqX module desktop">
   <div>
   </div>
  </div>
  <p>
-  <ok href="/term/12866?lang=b5">
-   五角大樓
+  <ok href="/term/12866">
+   五角大楼
   </ok>
-  一位官員迴應說，受假期影響，當局把幾次預定的會議推遲到新年之後。
+  一位官员回应说，受假期影响，当局把几次预定的会议推迟到新年之后。
  </p>
  <p>
-  該
-  <ok href="/term/12866?lang=b5">
-   五角大樓
+  该
+  <ok href="/term/12866">
+   五角大楼
   </ok>
-  官員指出，“從今天開始至下週，我們的日程安排還剩下不到20天”，他補充說，“參加會議的國防部工作人員不計其數”，“這些高級官員也需要從事日常工作，並被過渡活動分神...在假期期間，我們休息兩週。”
+  官员指出，“从今天开始至下周，我们的日程安排还剩下不到20天”，他补充说，“参加会议的国防部工作人员不计其数”，“这些高级官员也需要从事日常工作，并被过渡活动分神...在假期期间，我们休息两周。”
  </p>
  <p>
-  美媒Axios報道說，尚且不知道政府官員休假返回後繼續恢複合作的可能性。
+  美媒Axios报道说，尚且不知道政府官员休假返回后继续恢复合作的可能性。
  </p>
  <p>
-  迄今爲止，在總務管理局（GSA）不堪拜登陣營騷擾，放行對
-  <ok href="/term/382288?lang=b5">
-   拜登團隊
+  迄今为止，在总务管理局（GSA）不堪拜登阵营骚扰，放行对
+  <ok href="/term/382288">
+   拜登团队
   </ok>
-  的撥款與初始工作後，川普團隊與拜登過渡團隊的來往處於極爲緩慢的狀態，直到12月17日，
-  <ok href="/term/12866?lang=b5">
-   五角大樓
+  的拨款与初始工作后，川普团队与拜登过渡团队的来往处于极为缓慢的状态，直到12月17日，
+  <ok href="/term/12866">
+   五角大楼
   </ok>
-  宣佈取消與過渡相關的預定會議。
+  宣布取消与过渡相关的预定会议。
  </p>
  <h2>
-  另一國會議員表示要在1月6日質疑選舉團投票
+  另一国会议员表示要在1月6日质疑选举团投票
  </h2>
  <p>
-  亞利桑那國會衆議員安迪·比格斯（Andy Biggs）說，他準備與阿拉巴馬州衆議員布魯克斯（Mo Brooks）一起挑戰某些州在1月6日獲得選舉的選舉團票，“現在，我大力支持該計劃，因爲我們已經看到了很多指控。”
+  亚利桑那国会众议员安迪·比格斯（Andy Biggs）说，他准备与阿拉巴马州众议员布鲁克斯（Mo Brooks）一起挑战某些州在1月6日获得选举的选举团票，“现在，我大力支持该计划，因为我们已经看到了很多指控。”
  </p>
  <p>
-  在本週四，比格斯、布魯克斯與其他17名衆議員一起，聯名要求國會舉辦更多選舉調查聽證會，以確保國會成員聽取更多證人證詞。
+  在本周四，比格斯、布鲁克斯与其他17名众议员一起，联名要求国会举办更多选举调查听证会，以确保国会成员听取更多证人证词。
  </p>
  <p>
-  “我與他（布魯克斯）同一陣線，因爲選舉存在着太多欺詐行爲，我們實際上需要指出這一點，”比格斯說。
+  “我与他（布鲁克斯）同一阵线，因为选举存在着太多欺诈行为，我们实际上需要指出这一点，”比格斯说。
  </p>
  <h2>
-  喬治亞州宣佈檢查郵寄選票簽名 但拒絕挑戰選舉結果
+  乔治亚州宣布检查邮寄选票签名 但拒绝挑战选举结果
  </h2>
  <p>
-  喬治亞州州務卿拉芬斯珀格（Brad Raffensperger）宣佈對全州159個縣的郵寄選票簽名進行審覈。雖然如此，拉芬斯珀格在聲明中繼續宣稱，選舉是安全的，審計不能夠改變該州結果。
+  乔治亚州州务卿拉芬斯珀格（Brad Raffensperger）宣布对全州159个县的邮寄选票签名进行审核。虽然如此，拉芬斯珀格在声明中继续宣称，选举是安全的，审计不能够改变该州结果。
  </p>
  <p>
-  相關舉動被指是在外界對州政府選舉誠信的強烈質疑壓力下宣佈。
+  相关举动被指是在外界对州政府选举诚信的强烈质疑压力下宣布。
  </p>
  <p>
-  在此之前，喬治亞州的選舉結果不斷遭到質疑，美國知名律師林伍德在11月份發佈現場照片、視頻說，有選舉中心人員將大量疑似應當包含選民地址的郵寄選票信封放入碎紙車，從而摧毀了必要檢查的步驟。此外，喬治亞州富爾頓縣選舉中心內的監控視頻也被曝光，其中數名人士在要求其他員工離場後繼續統計了大量選票。
+  在此之前，乔治亚州的选举结果不断遭到质疑，美国知名律师林伍德在11月份发布现场照片、视频说，有选举中心人员将大量疑似应当包含选民地址的邮寄选票信封放入碎纸车，从而摧毁了必要检查的步骤。此外，乔治亚州富尔顿县选举中心内的监控视频也被曝光，其中数名人士在要求其他员工离场后继续统计了大量选票。
  </p>
  <h2>
-  密歇根一縣重新計票 宣佈川普贏得選舉
+  密歇根一县重新计票 宣布川普赢得选举
  </h2>
  <p>
-  密歇根安特里姆縣的重新計票顯示，川普比拜登贏得了更多的選票，此前在11月3日，該地宣稱拜登的票數超過川普3000張，但是在幾天后，該地宣佈川普的票數多於拜登，從而成爲勝者。
+  密歇根安特里姆县的重新计票显示，川普比拜登赢得了更多的选票，此前在11月3日，该地宣称拜登的票数超过川普3000张，但是在几天后，该地宣布川普的票数多于拜登，从而成为胜者。
  </p>
  <p>
-  本週發佈的重新計票結果顯示，川普總統在該縣獲得9759張選票，而拜登得票5959張。
+  本周发布的重新计票结果显示，川普总统在该县获得9759张选票，而拜登得票5959张。
  </p>
  <p>
-  12月初，代表川普團隊的聯合安全行動小組前往密歇根州檢查22臺選舉投票機，調查發現，這些選舉機在2020年選舉期間的運營錯誤率超過68%，遠高於法定許可的25萬分之一的錯誤率。
+  12月初，代表川普团队的联合安全行动小组前往密歇根州检查22台选举投票机，调查发现，这些选举机在2020年选举期间的运营错误率超过68%，远高于法定许可的25万分之一的错误率。
  </p>
  <h2>
-  鮑威爾在高院提起推翻密州和喬州的訴訟案
+  鲍威尔在高院提起推翻密州和乔州的诉讼案
  </h2>
  <p>
-  資深律師西德尼·鮑威爾（Sidney Powell）要求最高法院推翻密歇根州和喬治亞州的選舉結果。
+  资深律师西德尼·鲍威尔（Sidney Powell）要求最高法院推翻密歇根州和乔治亚州的选举结果。
  </p>
  <p>
-  本週，鮑威爾表示，高院拒絕了她與團隊成員在威斯康星和亞利桑那的訴訟，記錄了密歇根州和喬治亞州的訴訟案，但宣佈在1月14日前纔會給出恢復。
+  本周，鲍威尔表示，高院拒绝了她与团队成员在威斯康星和亚利桑那的诉讼，记录了密歇根州和乔治亚州的诉讼案，但宣布在1月14日前才会给出恢复。
  </p>
  <p class="meta-btm">
-  責任編輯：張莉莉
+  责任编辑：张莉莉
  </p>
  <p class="meta-btm">
-  本文章或節目經希望之聲編輯製作，轉載請註明希望之聲幷包含原文標題及鏈接。
+  本文章或节目经希望之声编辑制作，转载请注明希望之声并包含原文标题及链接。
  </p>
 </div>
 </div>
