同步于: 12月19日17时3分

--- a/pages/soh6/454936.md
+++ b/pages/soh6/454936.md
@@ -138,7 +138,7 @@
   资深律师西德尼·鲍威尔（Sidney Powell）要求最高法院推翻密歇根州和乔治亚州的选举结果。
  </p>
  <p>
-  本周，鲍威尔表示，高院拒绝了她与团队成员在威斯康星和亚利桑那的诉讼，记录了密歇根州和乔治亚州的诉讼案，但宣布在1月14日前才会给出恢复。
+  本周，鲍威尔表示，高院拒绝了她与团队成员在威斯康星和亚利桑那的诉讼，记录了密歇根州和乔治亚州的诉讼案，但宣布在1月14日前才会给出回复。
  </p>
  <p class="meta-btm">
   责任编辑：张莉莉
