--- a/pages/nf4514/n12631855.md
+++ b/pages/nf4514/n12631855.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新12.19】林伍德再告乔州州务卿" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
+<div><img alt="【大选更新12.19】亨特：我入狱后能挣多少？" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/144433-600x400.jpg"/>
 <div class="caption">
  图为林伍德律师（左）资料照。(Thomas Cooper/Getty Images)
 </div></div><hr/>
