同步于: 12月19日20时52分

--- a/pages/nsc412/n12631855.md
+++ b/pages/nsc412/n12631855.md
@@ -1,11 +1,11 @@
-### 【大选更新12.19】林伍德再告乔州州务卿
+### 【大选更新12.19】林伍德再诉乔州州务卿
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新12.19】亨特：我入狱后能挣多少？" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/144433-600x400.jpg"/>
+<div><img alt="【大选更新12.19】林伍德再告乔州州务卿" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
 <div class="caption">
  图为林伍德律师（左）资料照。(Thomas Cooper/Getty Images)
 </div></div><hr/>
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月19日讯】（大纪元记者陈霆综合报导）美国
+ 【大纪元2020年12月19日讯】（大纪元记者陈霆、李言综合报导）美国
  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
   大选舞弊
  </ok>
@@ -301,6 +301,10 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 29px; top: 4032px; width: 337px; height: 21px;">
+</div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 183px; top: 3905px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
