--- a/pages/nf4514/n12631855.md
+++ b/pages/nf4514/n12631855.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.19】林伍德再告乔州州务卿" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-51177487-600x400.jpg"/>
+<div><img alt="【大选更新12.19】川普吁支持者参加1月6日抗议" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012130122111528-600x400.jpg"/>
 <div class="caption">
- 图为林伍德律师（左）资料照。(Thomas Cooper/Getty Images)
+ 图为2020年12月12日，美国华盛顿DC举办“制止窃选、支持川普连任”的大型游行集会活动。图为民众持“KEEP AMERICA GREAT（让美国再度伟大）”的展板。（Leo Shi／大纪元）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月19日讯】（大纪元记者陈霆、李言综合报导）美国
+ 【大纪元2020年12月19日讯】（大纪元记者陈霆、李言、张婷综合报导）美国
  <ok href="https://www.epochtimes.com/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.html">
   大选舞弊
  </ok>
@@ -55,6 +55,18 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 川普再次督促共和党人奋力战斗
+</h3>
+<p>
+ 美国总统周六（12月19日）发表推文说，拜登没有赢得大选，而是在所有6个摇摆州都输了，而且输掉很多。然后他们在每个州灌入数十万张选票，被抓个正着。现在共和党政客们必须奋力一搏 以免他们的伟大胜利不被窃取。不要做软弱的愚人！
+</p>
+<p>
+ 川普周六呼吁支持者参加将于2021年1月6日在华盛顿举行的抗议活动。
+</p>
+<p>
+ 川普在另一则推文中说，川普政府走向未来的伟大成就之一将是授权并启动太空部队。祝贺大家!
+</p>
 <h3>
  乔治亚州证人：几乎每张桌子上都出现违规现象
 </h3>
