--- a/pages/nsc412/n12631855.md
+++ b/pages/nsc412/n12631855.md
@@ -56,6 +56,27 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 川普推特置顶视频：各国民众集会 高呼“为川普而战”
+</h3>
+<p>
+ 周六（19日）下午，川普总统在推特上发布了一段置顶视频。视频开头出现几个“‘为川普而战！’拯救美国，拯救世界”的字样，之后是各国民众集会支持川普、高喊“为川普而战”的口号。这些集会声势浩大，气氛热烈。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="und">
+  <ok href="https://t.co/ftlALc6UWn">
+   pic.twitter.com/ftlALc6UWn
+  </ok>
+ </p>
+ <p>
+  — Donald J. Trump (@realDonaldTrump)
+  <ok href="https://twitter.com/realDonaldTrump/status/1340362336390004737?ref_src=twsrc%5Etfw">
+   December 19, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<h3>
  乔州共和党人要法庭立即下令加强签名验证
 </h3>
 <p>
