--- a/pages/nsc412/n12631855.md
+++ b/pages/nsc412/n12631855.md
@@ -56,10 +56,10 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
- 川普推特置顶视频：各国民众集会 高呼“为川普而战”
+ 川普推特发布各国挺川视频 网友：拯救世界！我与川普站在一起！
 </h3>
 <p>
- 周六（19日）下午，川普总统在推特上发布了一段置顶视频。视频开头出现几个“‘为川普而战！’拯救美国，拯救世界”的字样，之后是各国民众集会支持川普、高喊“为川普而战”的口号。这些集会声势浩大，气氛热烈。
+ 周六（19日）下午，川普总统在推特上发布了一段置顶视频。视频开头出现“‘为川普而战！’拯救美国，拯救世界”的字样，之后是各国、各地区民众集会支持川普、高喊“为川普而战”的口号。这些集会声势浩大，气氛热烈。
 </p>
 <blockquote class="twitter-tweet">
  <p dir="ltr" lang="und">
@@ -75,6 +75,40 @@
  </p>
 </blockquote>
 <p>
+</p>
+<p>
+ 很多热情的网友在视频下方留言，表示支持。
+</p>
+<p>
+ 有网友说：“很棒的视频，如此的真实！”
+</p>
+<p>
+ 还有人说：““一场非常不可思议的运动！””
+</p>
+<p>
+ 一名荷兰的网友说：“我们会在降临节主日（advent sunday）升旗，从荷兰给予美国总统力量。”
+</p>
+<p>
+ 还有网友说：“拯救世界！我与川普站在一起！中共是魔鬼。”
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  Save the world! I stand with Trump! CCP is the devil.
+ </p>
+ <p>
+  — 아스파라거스 (@vM45vNCLRc7ycyA)
+  <ok href="https://twitter.com/vM45vNCLRc7ycyA/status/1340405474856878081?ref_src=twsrc%5Etfw">
+   December 19, 2020
+  </ok>
+ </p>
+</blockquote>
+<p>
+</p>
+<p>
+ 也有人说：“现在是所有优秀的爱国者来帮助他们国家的时候了。问问你能够为你的国家做些什么。”
+</p>
+<p>
+ 还有网友评论说：“看来世界人民已经醒来，意识到这场美国大选实质是自由世界与邪恶共产主义之战，是一场正邪大战，关系到人类和全世界的命运。”
 </p>
 <h3>
  乔州共和党人要法庭立即下令加强签名验证
