--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -111966,4 +111966,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12200702)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=12200751)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
