--- a/pages/nf4514/n12631855.md
+++ b/pages/nf4514/n12631855.md
@@ -56,6 +56,36 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 数据分析师：拜登在使用Dominion或HART InterCivic投票机的县得票异常
+</h3>
+<p>
+ 据英文大纪元报导，一数据分析师表示，在使用Dominion或HART InterCivic投票机的县中，民主党总统候选人乔·拜登得票异常。
+</p>
+<p>
+ 这名数据分析师在周四公布的一份报告中写道：“分析证据表明，使用了Dominion 投票系统制造的Dominion X / ICX BMD（投票标记设备）机器以及HART InterCivic的机器，似乎对选举结果产生了异常影响。”
+</p>
+<p>
+ 根据他的简介，这名因安全原因选择匿名的数据分析师，拥有30年的数据分析经验。
+</p>
+<p>
+ 他在自己的研究中，使用了投票数据和2017年人口普查数据来建立基准情景（baseline scenario），以预测选举结果。 然后，他使用基准模型来比较11月大选的结果。
+</p>
+<p>
+ 结果显示，在使用这两家公司的投票机的78％的县中，拜登都超出了预测线。
+</p>
+<p>
+ 他的分析还表明，拜登在这些县获得的选票始终比他本应获得的多出5.6％。
+</p>
+<p>
+ 他在一段介绍自己研究结果的视频中说：“这不应该发生……（在）使用Dominion机器的县（拜登的得票数）显然太高了。” “我认为那是一个巨大的危险信号……这里在发生什么事。”
+</p>
+<p>
+ 他表示，“+5.6％”的模式并不是由广泛用于民主党色彩很浓的县的投票机所导致的，因为在强烈支持川普总统的县也能发现这一模式。
+</p>
+<p>
+ 这项研究尚未经过同行评审。
+</p>
+<h3>
  川普推特发布各国挺川视频 网友：拯救世界！我与川普站在一起！
 </h3>
 <p>
